k8s/demo-portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "demo-portal"
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    name: istio-system
    istio.io/rev: asm-managed
spec: {}
status: {}
