k8s/demo-portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-portal
  namespace: demo-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-portal
  template:
    metadata:
      labels:
        app: demo-portal
    spec:
      containers:
        - name: demo-portal
          image: northamerica-northeast1-docker.pkg.dev/phx-01he5rx4wsv/paradire/demo-portal:main-7e21d07f8c7ce305174201590ae5919e594afe7d-1741022274 # {"$imagepolicy": "flux-system:demo-portal"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
