k8s/demo-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-portal
  namespace: demo-portal
spec:
  selector:
    app: demo-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
