k8s/demo-portal/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-portal-virtual-service
  namespace: istio-ingress
spec:
  hosts:
    - "*.demo-portal.iidi.alpha.phac.gc.ca"
  gateways:
    - istio-ingress/mesh-gateway
  http:
    - match:
        - headers:
            ":authority":
              exact: "demo-portal.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: demo-portal.iidi.svc.cluster.local
            port:
              number: 80
